# 26E2_3

./: .gitignore  Makefile  README.md  app.py  c01_modelos_llm.ipynb  c02_prompting.ipynb  c03_embeddings_busca.ipynb  c04_inferencia_local_ou_remota.ipynb  c05_rag_pipeline.ipynb  c06_antinomias.ipynb  c07_lei_como_dado.ipynb  pyproject.toml  requirements.txt
data/attribution/: authorship.json
data/raw/: CF.txt  CP.txt  CPP.txt  DL3688.txt  L11340.txt  L11343.txt  L8072.txt  LEP.txt  LINDB.txt
direito_dados/adapters/: __init__.py  base.py  planalto.py
direito_dados/analytics/: aggregate.py  authorship.py  network.py  penalties.py  plots.py  sandbox.py  summary.py  timeline.py
direito_dados/attribution/: __init__.py  camara.py  enrich.py  models.py  senado.py
direito_dados/conflicts/: candidates.py  detect.py  detector.py  evaluate.py  principles.py
direito_dados/corpus/: __init__.py  annotations.py  fetch.py  hierarchy.py  loader.py  models.py  parser.py  registry.py
direito_dados/generation/: __init__.py  llm.py  parse.py  prompt.py  rag.py
direito_dados/graph/: __init__.py  builder.py  models.py
direito_dados/retrieval/: chunks.py  embedder.py  evaluate.py  index.py  lexical.py
report/: relatorio.md
scripts/: build_attribution.py  build_index.py  build_report.py  demo.py  fetch_corpus.py
tests/adapters/: test_planalto.py
tests/analytics/: test_authorship.py  test_network.py  test_penalties.py  test_plots.py  test_sandbox.py  test_summary.py  test_timeline.py
tests/app/: test_app_smoke.py
tests/attribution/: test_build_attribution.py  (+4 more)
(+37 files in other folders)
